--- a/src/styles/Post.module.css
+++ b/src/styles/Post.module.css
@@ -1,15 +1,54 @@
-.post
-{
+.post {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   padding-left: 2vw;
-  font-size: 5vh;
   padding-top: 2vh;
 }
 
-.post__comeback
-{
+.post__body {
+  font-size: 5vh;
+}
+
+.post__comeback {
   color: red;
   padding-top: 2vh;
+  font-size: 4.8vh;
+}
+
+/* Mobile */
+@media (max-width: 700px) {
+  .post {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding-left: 3vw;
+    padding-top: 2.5vh;
+  }
+
+  .post__body {
+    font-size: 6vw;
+  }
+  
+  .post__comeback {
+    font-size: 5.8vw;
+  }
+
+  .post__title {
+    font-size: 1rem;
+  }
+}
+
+@media (max-width: 320px) {
+  .post__title {
+    font-size: .7rem;
+  }
+
+  .post__body {
+    font-size: 5.5vw;
+  }
+  
+  .post__comeback {
+    font-size: 5.3vw;
+  }
 }
